# PixelForge

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.hermes/plans/: 2026-07-10_123726-outline-quality-humanoid-chibi.md  2026-07-11_222235-gramaticas-visuales.md  2026-07-12_012125-validacion-semantica-de-vista-e-intencion.md
app/: main.py
app/models/: humanoid.py  sprite_artifact.py  sprite_quality.py  workflow.py
app/routes/: admin.py  api.py  helpers.py  web.py
app/schemas/: admin.py  settings.py  sprite.py  workflow.py
app/services/: artifact_store.py  humanoid_sprite.py  llm_generation.py  logging_config.py  procedural_sprite.py  settings.py  sprite.py  sprite_artifact_store.py  sprite_blueprint.py  sprite_interpretation.py  sprite_mvp.py  sprite_processing.py  sprite_quality.py  systemd_control.py  trace_context.py  workflow_service.py
app/sprite_engine/: __init__.py
app/sprite_engine/character/: __init__.py  quadruped_skeleton.py  quadruped_spec.py  side_skeleton.py  skeleton.py  spec.py
app/sprite_engine/grammar/: __init__.py  classification.py  humanoid_front.py  humanoid_side.py  legacy.py  models.py  quadruped_side.py  registry.py  templates.py
app/static/: styles.css
app/templates/: base.html
app/templates/pages/: home.html  (+4 more)
docs/: architecture.md
docs/plans/: 2026-07-13-visual-critique-cycle.md
scripts/: render_grammar_contact_sheet.py
tests/: conftest.py  test_admin_service_restart.py  test_api_and_web.py  test_artifact_store.py  test_character_composition.py  test_family_semantic_quality.py  test_humanoid_sprite.py  test_layered_compositor.py  test_llm_generation.py  test_observability.py  test_procedural_sprite.py  test_semantic_view_quality.py  test_sprite.py  test_sprite_blueprint_generation.py  test_sprite_engine_boundary.py  test_sprite_intent.py  test_sprite_mvp.py  test_sprite_quality.py  test_sprite_semantic_repair.py  test_visual_grammar_review.py  test_visual_grammars.py
(+18 files in other folders)
