[project]
name = "fastapi-htmx-service-template"
version = "0.1.0"
description = "Reusable local-first FastAPI + HTMX service template with JSON logs, artifacts, and optional LLM calls."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "pydantic",
  "pydantic-settings",
  "jinja2",
  "httpx",
  "pillow",
  "numpy",
]

[dependency-groups]
dev = [
  "pytest",
  "httpx",
  "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # line length is enforced by the formatter, not worth hard-failing on
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/File/Form/Query/... are meant to be called in argument
# defaults; ruff would otherwise flag them as the mutable-default-arg smell.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.format]
line-ending = "lf"
